# snatch

./: .gitignore  Dockerfile.test  Makefile  README.md  rebar.config  rebar3
blackbox-tests/: README.md  config.py  conftest.py  docker-compose.yml  ejabberd.yml  requirements.txt  results_erlang_xmpp_only.json  results_rust.json  results_rust_xmpp_only.json  run.sh
blackbox-tests/bots/erlang/: Dockerfile  README.md  rebar.config
blackbox-tests/bots/erlang/src/: snatch_echo.app.src  snatch_echo.erl  snatch_echo_app.erl  snatch_echo_sup.erl
blackbox-tests/bots/rust/: Cargo.toml
blackbox-tests/bots/rust/src/: main.rs
blackbox-tests/harness/: metrics.py
blackbox-tests/tests/: test_kafka_perf.py  test_rabbitmq_perf.py  test_sqs_perf.py  test_xmpp_perf.py
src/: claws_aws_sqs.erl  claws_aws_sqs_consumer.erl  claws_rabbitmq.erl  claws_xmpp.erl  claws_xmpp_comp.erl  snatch.app.src  snatch.erl  snatch_router.erl
test/: claws_lp_tests.erl  claws_xmpp_utils_tests.erl  snatch_jid_tests.erl  snatch_router_tests.erl  snatch_xml_tests.erl
